     changed to be regular units.
   * Fix bug in SotBE DoD where no_leader should have been used instead of a
     leader without a starting position.
   * Fix bug in SotBE CoA where the mermen side should have their leader
     created in an event rather than defined in the side setup.
   * Add a backup save_id to use if both save_id and description are empty.

Version 1.0.1:
 * graphics
   * new death animations: Mage, Pikeman, Red_Mage, White_Mage
   * portraits:
     * new portraits: Drake_Burner, Drake_Fighter, Drake_Glider
     * made all Drake, Merman, Naga and Saurian upgrades use the level one
       portraits
     * made the Necrophage and the Orcish_Slayer use the Lvl1 portraits of 
       their line
   * removed deprecated death animation of the Drake_Fighter
 * language and i18n:
   * updated translations: Afrikaans, Chinese, Italian, Polish, Russian,
     Slovenian, Turkish
 * Campaign server
   * Changed campaign_name_legal to bar name of '.'
   * Back ported check_names_legal to be combined with an upcoming change
     that will close a vulnerability to bogus data from the campaign server.
   * Before doing anything destructive to install a new campaign, all of the
     file and directory names are checked to make sure they are safe and if not
     the campaign is not installed.
 * multiplayer
   * multiplayer game with "empty" as side no longer causes OOS (#4464)
   * disabled 'advancefrom' in multiplayer
   * revised multiplayer maps: Divide and Conquer, Sablestone Delta,
     Silverhead Crossing, Sullas Ruins, 1v1v1Hex, Charge, Blitz, Clash, 
     Hamlets, Meteor Lake, Den of Onis, Smallolof
   * updated multiplayer maps cfg files: Clash, Hexcake, Smallolof
 * music and sound:
   * new main menu music
 * units and balancing changes:
   * removed Thug from Knalgan faction
   * Northerners can now recruit Rocklobber in Age of Heroes era
 * documentation switch doxygen templates from CVS to SVN and Savannah to Gna!